# PopBubbles

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build_vs.bat
.claude/: settings.local.json
assets/audio/: README.txt
src/: main.cpp
src/core/: Audio.cpp  Audio.h  Button.cpp  Button.h  Game.cpp  Game.h  Input.cpp  Input.h  ResourceManager.cpp  ResourceManager.h  State.h  TextBox.cpp  TextBox.h
src/entities/: Bubble.cpp  Bubble.h  Bullet.cpp  Bullet.h  Collision.h  Entity.cpp  Entity.h  GiantBubble.cpp  GiantBubble.h  Player.cpp  Player.h  ShooterBubble.cpp  ShooterBubble.h
src/states/: GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  LeaderboardState.cpp  LeaderboardState.h  MainMenuState.cpp  MainMenuState.h  TutorialState.cpp  TutorialState.h
src/system/: Leaderboard.cpp  Leaderboard.h
